--- a/src/SiteUpdater/appSettings.json
+++ b/src/SiteUpdater/appSettings.json
@@ -3,10 +3,10 @@
   "Destination": "D:\\TEST\\Services",
   "Targets": {
     "OneOffice.Server.FrontEnd": "8086",
-    "OneOffice.Server.Backend": "8081",
+    "OneOffice.WEb.Backend": "8081",
     "OneOffice.Server.Health": "8082",
-    "OneOffice.Service.Survey": "9000",
-    "OneOffice.Service.Scheduler": "9001",
+    "OneOffice.Server.Survey": "9000",
+    "OneOffice.Server.Scheduler": "9001",
     "OneOffice.Service.Email": "9002",
     "OneOffice.Service.Payroll": "9003",
     "OneOffice.Service.Employee": "9004",
